--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.navBar {
+  max-width: 400px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.navBar li {
+  flex: 1;
+}
